# trata

./: Cargo.toml  ProjectPlanning.md  README.md
examples/: cli-example.rs
src/: lib.rs
tests/: integration_test.rs
